veskim-sfdx/force-app/main/default/objects/Address__c/Address__c.object-meta.xml
<CustomObject>
    <description>Customer address records linked to Account. Supports multiple shipping and billing addresses per customer.</description>
    <label>Address</label>
    <nameField>
        <label>Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>