veskim-sfdx/force-app/main/default/objects/Address__c/fields/Address_Definition__c.field-meta.xml
<CustomField>
    <fullName>Address_Definition__c</fullName>
    <description>Short descriptive name for the address (e.g. Gebze Depot, Head Office).</description>
    <label>Address Definition</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>