veskim-sfdx/force-app/main/default/objects/Address__c/fields/Address_Email__c.field-meta.xml
<CustomField>
    <fullName>Address_Email__c</fullName>
    <description>Contact email for this location (used for delivery notifications).</description>
    <label>Address Email</label>
    <type>Email</type>
</CustomField>