veskim-sfdx/force-app/main/default/objects/Address__c/fields/Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_1__c</fullName>
    <description>Street, road, building number. Must comply with Logo character limits.</description>
    <label>Address Line 1</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>