veskim-sfdx/force-app/main/default/objects/Address__c/fields/Address_Phone__c.field-meta.xml
<CustomField>
    <fullName>Address_Phone__c</fullName>
    <description>Fixed phone number for this location.</description>
    <label>Address Phone</label>
    <type>Phone</type>
</CustomField>