veskim-sfdx/force-app/main/default/objects/Address__c/fields/Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Address_Type__c</fullName>
    <description>Intended use of the address: Shipping or Billing.</description>
    <label>Address Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shipping Address</fullName>
            </value>
            <value>
                <fullName>Billing Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>