veskim-sfdx/force-app/main/default/objects/Address__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City (Province) selected from Logo master data list.</description>
    <label>City</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>