veskim-sfdx/force-app/main/default/objects/Address__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <description>Name of the goods receiving officer at this address location.</description>
    <label>Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>