veskim-sfdx/force-app/main/default/objects/Address__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country of the address. Default is Turkey (TR).</description>
    <label>Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Turkey</fullName>
                <default>true</default>
                <label>Turkey</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>