veskim-sfdx/force-app/main/default/objects/Address__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <description>District (Ilce) linked to the selected city from Logo master data.</description>
    <label>District</label>
    <length>100</length>
    <type>Text</type>
</CustomField>