veskim-sfdx/force-app/main/default/objects/Address__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>Unique address key from Logo ERP system for synchronization.</description>
    <externalId>true</externalId>
    <label>External ID (Logo Address Code)</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>