veskim-sfdx/force-app/main/default/objects/Address__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this address is currently in use.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>