veskim-sfdx/force-app/main/default/objects/Address__c/fields/Neighborhood__c.field-meta.xml
<CustomField>
    <fullName>Neighborhood__c</fullName>
    <description>Neighborhood (Mahalle/Semt) linked to the selected district from Logo master data.</description>
    <label>Neighborhood</label>
    <length>100</length>
    <type>Text</type>
</CustomField>