veskim-sfdx/force-app/main/default/objects/Address__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>Postal/ZIP code for the address location.</description>
    <label>Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>